# epinet

./: .gitignore  .zenodo.json  CITATION.cff  CONTRIBUTING.md  Data-format.md  LICENSE  MIT License.md  NOTICE  README.md  RELEASE_NOTES_v0.4.1.md  RELEASE_NOTES_v0.4.3.md  epinet-analysis-v2.py  epinet-analysis.py  epinet_baselines.py  epinet_cluster.py  epinet_common.py  epinet_contest.py  epinet_federated.py  epinet_governance.py  epinet_ingest.py  epinet_llmvahti.py  epinet_registry.py  epinet_report.py  epinet_schema.py  epinet_toolkit.py  epinet_ui.py  epinet_validation.py  epinet_viz.py  epinet_workbench.py  pyproject.toml  requirements.txt  synthetic_edges.csv  synthetic_nodes.csv
.claude/skills/cran-compliance/: SKILL.md
.claude/skills/cran-compliance/reference/: cran-checklist.md
.claude/skills/iterative-improvement/: SKILL.md
.claude/skills/methodology-and-math/: SKILL.md
.claude/skills/methodology-and-math/reference/: rigor-checklist.md
.claude/skills/run-r-analysis/: SKILL.md
.claude/skills/run-r-analysis/reference/: headless-r-cheatsheet.md
.github/workflows/: publish.yml  r-cmd-check.yml  tests.yml
docs/: epistemic-science.md  examples.md  federated.md  governance-and-consent.md  llmvahti-gap-analysis.md  llmvahti.md  methods.md  validation.md
epinet/: __init__.py  baselines.py  claims.py  cluster.py  config.py  contest.py  federated.py  governance.py  htmlreport.py  ingest.py  llmvahti.py  palette.py  r_api.py  registry.py  schema.py  toolkit.py  ui.py  validation.py  viz.py  workbench.py
examples/: NLST_README.md  baseline_comparison_demo.py  build_lidc_cohort.py  build_lymphoma_workflow.py  build_nlst_cohort.py  build_nodule_cohort.py  build_nordic_lung_cancer_qi.py  citematch_edges.csv  citematch_nodes.csv  citematch_usecase.md  divergence_topography.py  divergence_topography_usecase.md  external_validation_demo.py  federated_contestability_demo.py  federated_governed_round_demo.py  federated_two_site_demo.py  governance_egress_demo.py  lidc_cohort_usecase.md  lymphoma_workflow_usecase.md  nodule_cohort_usecase.md  nodule_edges.csv  nodule_nodes.csv  nodule_risk_scores.csv  nordic_lung_cancer_qi_edges.csv  nordic_lung_cancer_qi_nodes.csv  nordic_lung_cancer_qi_usecase.md  pathology_sensitivity.py  pathology_validation.py  pathology_validation_usecase.md  registry_adapter_demo.py  score_comparison.py  score_comparison_synthetic.json  score_comparison_synthetic.py  score_comparison_synthetic_usecase.md  score_comparison_usecase.md  test_fusion.py  test_fusion_usecase.md  validate_nodule_models.py
examples/sample-outputs/: README.md  model_card.md  model_metrics.json  run_summary.json
paper/: paper.bib  paper.md
r/epinetR/: .Rbuildignore  DESCRIPTION  LICENSE  NAMESPACE  README.md  cran-comments.md
r/epinetR/R/: contestability.R  epinet.R  graph.R
r/epinetR/man/: epinet.Rd  epinet_federated.Rd
r/epinetR/tests/: testthat.R
r/epinetR/tests/testthat/: test-epinet.R  test-graph.R
r/vahtian.epinet/: DESCRIPTION  README.md
r/vahtian.epinet/R/: contestability.R  epinet.R  federated.R  graph.R
r/vahtian.epinet/man/: epinet.Rd  epinet_contestability.Rd  epinet_graph.Rd
r/vahtian.epinet/tests/: testthat.R
r/vahtian.epinet/tests/testthat/: test-contestability.R  test-epinet.R  test-federated.R  test-graph.R
tests/: test_claims_report.py  test_epinet_toolkit.py  test_llmvahti.py  test_workbench.py
vahtian/: __init__.py
vahtian/epinet/: __init__.py  baselines.py  claims.py  cluster.py  common.py  config.py  contest.py  federated.py  governance.py  htmlreport.py  ingest.py  llmvahti.py  palette.py  r_api.py  registry.py  report.py  schema.py  toolkit.py  ui.py  validation.py  viz.py  workbench.py
