[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "epinet"
version = "0.4.0"
description = "EpiNet (Epistemic Network): transparent network/feature-space analysis with honest evaluation (calibration, permutation nulls, model cards), nearest-centroid contestability, and federated governed aggregates."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [{ name = "EpiNet contributors" }]
keywords = ["network-analysis", "graph", "centroid-clustering", "epidemiology", "quality-indicators"]

dependencies = [
    "networkx>=2.5",
    "numpy>=1.19.2",
    "pandas>=1.1.5",
    "scikit-learn>=0.24.1",
    "matplotlib>=3.3.2",
    "pyyaml>=5.4",
]

[project.optional-dependencies]
# Example-only datasets and I/O, kept out of the core install.
lidc = ["pylidc>=0.2.3"]       # LIDC-IDRI / LUNA16 cohort reconstruction
excel = ["xlrd>=2.0", "openpyxl>=3.0"]  # reading the TCIA diagnosis spreadsheets
ui = ["streamlit>=1.30"]       # the local EpiNet Workbench UI
dev = ["pytest>=7.0", "ruff>=0.4", "hypothesis>=6.0"]

[project.scripts]
epinet = "epinet.toolkit:main"
epinet-workbench = "epinet.workbench:main"
epinet-llmvahti = "epinet.llmvahti:main"

[project.urls]
Homepage = "https://github.com/heidihelena/epinet"

[tool.setuptools]
# Package layout: all modules live under the `epinet` package, imported as
# `from epinet import toolkit`, etc. (consolidated from the former flat
# `epinet_*.py` modules).
packages = ["epinet"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 110
target-version = "py310"

[tool.ruff.lint]
extend-select = ["I"]      # import sorting
ignore = ["E402", "E702"]  # examples import after sys.path setup; compact one-liners allowed
