[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "vahtian-epinet"
version = "0.4.3"
description = "EpiNet (Epistemic Network): transparent network/feature-space analysis with honest evaluation (calibration, permutation nulls, model cards), nearest-centroid contestability, and federated governed aggregates."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [{ name = "EpiNet contributors" }]
keywords = ["network-analysis", "graph", "centroid-clustering", "epidemiology", "quality-indicators"]

dependencies = [
    "networkx>=2.5",
    "numpy>=1.19.2",
    "pandas>=1.1.5",
    "scikit-learn>=0.24.1",
    "matplotlib>=3.3.2",
    "pyyaml>=5.4",
]

[project.optional-dependencies]
# Example-only datasets and I/O, kept out of the core install.
lidc = ["pylidc>=0.2.3"]       # LIDC-IDRI / LUNA16 cohort reconstruction
excel = ["xlrd>=2.0", "openpyxl>=3.0"]  # reading the TCIA diagnosis spreadsheets
ui = ["streamlit>=1.30"]       # the local EpiNet Workbench UI
xgboost = ["xgboost>=1.7"]     # optional XGBoost estimator backend
torch = ["torch>=2.0"]         # optional tiny PyTorch MLP estimator backend
dev = ["pytest>=7.0", "ruff>=0.4", "hypothesis>=6.0"]

[project.scripts]
epinet = "vahtian.epinet.toolkit:main"
epinet-workbench = "vahtian.epinet.workbench:main"
epinet-llmvahti = "vahtian.epinet.llmvahti:main"

[project.urls]
Homepage = "https://github.com/heidihelena/epinet"

# Package layout: modules live under the `vahtian.epinet` package, imported as
# `from vahtian.epinet import toolkit`, etc. `vahtian` is a PEP 420 namespace
# (no __init__.py) so sibling tools (e.g. vahtian.citevahti) can ship separately.
[tool.setuptools.packages.find]
include = ["vahtian*"]
namespaces = true

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 110
target-version = "py310"

[tool.ruff.lint]
extend-select = ["I"]      # import sorting
ignore = ["E402", "E702"]  # examples import after sys.path setup; compact one-liners allowed
